Fixed up the makefiles with automatically

--- a/code/clutter/learning/example2/Makefile
+++ b/code/clutter/learning/example2/Makefile
@@ -1,19 +1,14 @@
-INCLUDES=-I/usr/include/pango-1.0 \
--I/usr/include/cairo \
--I/usr/lib/glib-2.0/include \
--I/usr/include/glib-2.0 \
--I/usr/include/gtk-2.0 \
--I/usr/lib/gtk-2.0/include \
--I/usr/include/atk-1.0 \
--I/usr/local/include/clutter-0.8
-
-LIBDIR=-L/usr/local/lib
-LIBS=-lclutter-glx-0.8 -lgtk-x11-2.0 -lclutter-gtk-0.8
+CFLAGS=`pkg-config clutter-0.8 --cflags`
+LIBS=`pkg-config clutter-0.8 --libs` -lgtk-x11-2.0 -lclutter-gtk-0.8
+CFLAGS+= -I/usr/local/include/clutter-0.8
+CFLAGS+= -I/usr/lib/gtk-2.0/include
+CFLAGS+= -I/usr/include/atk-1.0
+CC=gcc
 
 all: main
 
 main: main.c
-	$(CC) $(INCLUDES) $(LIBDIR) -o $@ $< $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
 
 clean: main
 	rm $<
