--- a/code/clutter/learning/example3/Makefile
+++ b/code/clutter/learning/example3/Makefile
@@ -1,16 +1,12 @@
-INCLUDES=-I/usr/include/pango-1.0/ \
--I/usr/include/cairo/ \
--I/usr/lib/glib-2.0/include/ \
--I/usr/include/glib-2.0 \
--I/usr/local/include/clutter-0.8/
-
-LIBDIR=-L/usr/local/lib
-LIBS=-lclutter-glx-0.8
+CFLAGS=`pkg-config clutter-0.8 --cflags`
+LIBS=`pkg-config clutter-0.8 --libs`
+CFLAGS+= -I/usr/local/include/clutter-0.8
+CC=gcc
 
 all: main
 
 main: main.c
-	$(CC) $(INCLUDES) $(LIBDIR) -o $@ $< $(LIBS)
+	$(CC) $(CFLAGS) -o $@ $< $(LIBS)
 
 clean: main
 	rm $<
