Big TicTacToe update and gitignore update

--- a/school/605.404.OO.Programming.With.Cpp/HW1/Makefile
+++ b/school/605.404.OO.Programming.With.Cpp/HW1/Makefile
@@ -1,4 +1,10 @@
-all: tic_random tic_interactive
+INCLUDE=../../../code/cpp/testing/googletest-read-only/include
+LIBS=../../../code/cpp/testing/googletest-read-only/mybuild
+
+all: tic_random tic_interactive tictactoe_unittest
+
+tictactoe_unittest: tictactoe_unittest.cpp tictactoe.h
+	g++ -o $@ $< -I${INCLUDE} -L${LIBS} -lgtest -lgtest_main -lpthread
 
 tic_random: tic_random.cpp tictactoe.cpp tictactoe.h
 	g++ -o $@ $<
