Addition and subtraction work

--- a/school/605.404.OO.Programming.With.Cpp/HW4/Makefile
+++ b/school/605.404.OO.Programming.With.Cpp/HW4/Makefile
@@ -1,7 +1,7 @@
 INCLUDE=../../../code/cpp/testing/googletest-read-only/include
 LIBS=../../../code/cpp/testing/googletest-read-only/mybuild
 hugeint_unittest: hugeint_unittest.cpp hugeint.h
-	g++ -o $@ $< -I${INCLUDE} -L${LIBS} -lgtest -lgtest_main -lpthread
+	g++ -g -O0 -o $@ $< -I${INCLUDE} -L${LIBS} -lgtest -lgtest_main -lpthread
 
 test: test.cpp hugeint.h
 	g++ -o $@ $<
