Moved some poker files, major refactor

--- a/school/605.404.OO.Programming.With.Cpp/HW2/Makefile
+++ b/school/605.404.OO.Programming.With.Cpp/HW2/Makefile
@@ -3,11 +3,9 @@ LIBS=../../../code/cpp/testing/googletest-read-only/mybuild
 
 all: poker_unittest
 
-test: test.cpp poker.h
-	g++ -O3 -o $@ $<
-
-poker_unittest: poker_unittest.cpp poker.h
-	g++ -O3 -o $@ $< -I${INCLUDE} -L${LIBS} -lgtest -lgtest_main -lpthread
+poker_unittest: poker_unittest.cpp pokerhand.h pokerhand.cpp
+	g++ -O3 -Wall -o $@ $< pokerhand.cpp card.cpp -I${INCLUDE} -L${LIBS} \
+			-lgtest -lgtest_main -lpthread
 
 clean:
 	rm poker_unittest
