--- a/school/605.404.OO.Programming.With.Cpp/HW2/Makefile
+++ b/school/605.404.OO.Programming.With.Cpp/HW2/Makefile
@@ -3,9 +3,9 @@ LIBS=../../../code/cpp/testing/googletest-read-only/mybuild
 
 all: poker_unittest
 
-poker_unittest: poker_unittest.cpp pokerhand.h pokerhand.cpp card.h card.cpp
-	g++ -O3 -Wall -o $@ $< pokerhand.cpp card.cpp -I${INCLUDE} -L${LIBS} \
-			-lgtest -lgtest_main -lpthread
+#poker_unittest: poker_unittest.cpp pokerhand.h pokerhand.cpp card.h card.cpp
+#	g++ -O3 -Wall -o $@ $< pokerhand.cpp card.cpp -I${INCLUDE} -L${LIBS} \
+#			-lgtest -lgtest_main -lpthread
 
 clean:
 	rm poker_unittest
