--- a/code/cpp/boost/spirit/Makefile
+++ b/code/cpp/boost/spirit/Makefile
@@ -1,2 +1,8 @@
-all:
+all: test1 test2
+
+test1: test1.cpp
 	g++ -Wall -O2 -o test1 test1.cpp
+
+test2: test2.cpp
+	g++ -Wall -O2 -o test2 test2.cpp
+
