Some actual working code..

--- a/school/605.404.OO.Programming.With.Cpp/HW3/Makefile
+++ b/school/605.404.OO.Programming.With.Cpp/HW3/Makefile
@@ -4,5 +4,5 @@ parser: parser.cpp
 	g++ -o parser parser.cpp
 
 p2: p2.cpp
-	g++ -o p2 p2.cpp -lboost_date_time
+	g++ -o p2 p2.cpp -lboost_date_time -g -Wall
 
