Almost working, almost ready to submit

--- a/school/605.404.OO.Programming.With.Cpp/HW3/Makefile
+++ b/school/605.404.OO.Programming.With.Cpp/HW3/Makefile
@@ -1,8 +1,5 @@
 all: p2
 
-parser: parser.cpp
-	g++ -o parser parser.cpp
-
-p2: p2.cpp
-	g++ -o p2 p2.cpp -lboost_date_time -g -Wall
-
+p2: p2.cpp stock.cpp stocksnapshot.cpp stockutil.cpp
+	g++ -o p2 p2.cpp stockutil.cpp stock.cpp stocksnapshot.cpp \
+		-lboost_date_time -lboost_filesystem -lboost_regex -g -Wall
