--- a/school/605.404.OO.Programming.With.Cpp/HW5/Makefile
+++ b/school/605.404.OO.Programming.With.Cpp/HW5/Makefile
@@ -1,5 +1,5 @@
 all: bill_of_materials
 
-bill_of_materials: bill_of_materials.cpp
-	g++ -o bill_of_materials bill_of_materials.cpp \
+bill_of_materials: bill_of_materials.cpp part.cpp
+	g++ -o bill_of_materials bill_of_materials.cpp part.cpp\
 		-std=gnu++0x -lboost_date_time -lboost_filesystem -lboost_regex -g -Wall
