--- a/school/605.404.OO.Programming.With.Cpp/HW6/Makefile
+++ b/school/605.404.OO.Programming.With.Cpp/HW6/Makefile
@@ -1,4 +1,4 @@
-all: elevator
+all: lev_sim
 
-elevator: passenger.cpp floor.cpp building.cpp elevator.cpp main.cpp building.h elevator.h floor.h passenger.h
+lev_sim: passenger.cpp floor.cpp building.cpp elevator.cpp main.cpp building.h elevator.h floor.h passenger.h
 	g++ -o $@ passenger.cpp floor.cpp building.cpp elevator.cpp main.cpp -g -Wall
