Maybe working stuff

--- a/code/cpp/burst/SConstruct
+++ b/code/cpp/burst/SConstruct
@@ -1,7 +1,8 @@
 env = DefaultEnvironment(
    CPPPATH = ['#include/'],
-   CXXCOMSTR = "Building $TARGET",
-   LINKCOMSTR = "Linking $TARGET",
+   CXXFLAGS = "-std=c++0x",
+   #CXXCOMSTR = "Building $TARGET",
+   #LINKCOMSTR = "Linking $TARGET",
 )
 Export('env')
 env.SConscript(['examples/SConscript'])
