--- a/code/avr/tutorials/Makefile
+++ b/code/avr/tutorials/Makefile
@@ -2,7 +2,8 @@ MCU=attiny85
 F_CPU=8000000# 8 MHz
 CC=avr-gcc
 OBJCOPY=avr-objcopy
-CFLAGS=-Os -I.
+CFLAGS=-Os -I. -Wall
+AVRFLAGS=-U lfuse:w:0xe2:m -U hfuse:w:0xdf:m -U efuse:w:0xff:m
 
 TARGETS=$(patsubst %.c, %.hex, $(wildcard *.c))
 
@@ -14,5 +15,8 @@ TARGETS=$(patsubst %.c, %.hex, $(wildcard *.c))
 
 all: $(TARGETS)
 
-clean: $(TARGETS)
-	rm $<
+install: $(TARGETS)
+	sudo avrdude $(AVRFLAGS) -c usbtiny -p t85 -e -U flash:w:$<
+
+clean:
+	rm -f *.o *.hex
