--- a/code/avr/tutorials/Makefile
+++ b/code/avr/tutorials/Makefile
@@ -2,10 +2,11 @@ MCU=attiny85
 F_CPU=8000000# 8 MHz
 CC=avr-gcc
 OBJCOPY=avr-objcopy
-CFLAGS=-Os -I. -I../include -Wall
+CFLAGS=-Os -I. -I../include -I/home/hank/repos/simavr/include -Wall -gdwarf-2
 AVRFLAGS=-U lfuse:w:0xe2:m -U hfuse:w:0xdf:m -U efuse:w:0xff:m
 
 TARGETS=$(patsubst %.c, %.hex, $(wildcard *.c))
+OBJS=$(patsubst %.c, %.o, $(wildcard *.c))
 
 %.o: %.c
 	$(CC) $(CFLAGS) -DF_CPU=$(F_CPU) -mmcu=$(MCU) $< -o $@
@@ -13,7 +14,7 @@ TARGETS=$(patsubst %.c, %.hex, $(wildcard *.c))
 %.hex: %.o
 	$(OBJCOPY) -j .text -O ihex $< $@ 
 
-all: $(TARGETS)
+all: $(TARGETS) $(OBJS)
 
 # You can do `make install some.hex` to just done one, of course
 install: $(TARGETS)
