Taking suggestion to use -R instead of -j
On avr-objcopy

--- a/code/avr/lcd/clock/Makefile
+++ b/code/avr/lcd/clock/Makefile
@@ -4,4 +4,4 @@ LCDIESEL_INCLUDE=$(LCDIESEL)/include
 CFLAGS=-Os -DF_CPU=8000000 -mmcu=attiny2313a -I$(LCDIESEL_INCLUDE)
 all: 
 	avr-gcc $(CFLAGS) -o main.o test.c $(LCDIESEL_LIB)/lcd.o
-	avr-objcopy -j .text -j.data -O ihex main.o main.hex
+	avr-objcopy -R .fuse -R .lock -R .eeprom -O ihex main.o main.hex
