--- a/code/ruby/interview_practice/Makefile
+++ b/code/ruby/interview_practice/Makefile
@@ -1,4 +1,8 @@
+all: basic_heap merge_sort
+
 basic_heap: basic_heap.c
 	gcc -Wall -o $@ $< -lm
 
-all: basic_heap
+merge_sort: merge_sort.c
+	gcc -g -Wall -o $@ $< -lm
+
