New merge sort is better.

--- a/code/interview_practice/Makefile
+++ b/code/interview_practice/Makefile
@@ -1,8 +1,8 @@
-all: basic_heap merge_sort
+all: basic_heap merge_sort2
 
 basic_heap: basic_heap.c
 	gcc -Wall -o $@ $< -lm
 
-merge_sort: merge_sort.c
-	gcc -g -Wall -o $@ $< -lm
+merge_sort2: merge_sort2.cpp
+	g++ -g -Wall -o $@ $<
 
