--- a/code/interview_practice/Makefile
+++ b/code/interview_practice/Makefile
@@ -1,4 +1,5 @@
-all: basic_heap merge_sort2
+TARGETS=basic_heap merge_sort2
+all: $(TARGETS)
 
 basic_heap: basic_heap.c
 	gcc -Wall -o $@ $< -lm
@@ -6,3 +7,5 @@ basic_heap: basic_heap.c
 merge_sort2: merge_sort2.cpp
 	g++ -g -Wall -o $@ $<
 
+clean:
+	rm $(TARGETS)
