Quick sort finally working

--- a/code/interview_practice/Makefile
+++ b/code/interview_practice/Makefile
@@ -1,10 +1,13 @@
-TARGETS=basic_heap merge_sort2
+TARGETS=basic_heap merge_sort2 quick_sort
 all: $(TARGETS)
 
 basic_heap: basic_heap.c
 	gcc -Wall -o $@ $< -lm
 
 merge_sort2: merge_sort2.cpp
+	g++ -g -Wall -o $@ $<
+
+quick_sort: quick_sort.cpp
 	g++ -g -Wall -o $@ $<
 
 clean:
