Adding a sweet abstract factory pattern impl

--- a/code/interview_practice/Makefile
+++ b/code/interview_practice/Makefile
@@ -1,5 +1,8 @@
-TARGETS=basic_heap merge_sort2 quick_sort bfs
+TARGETS=basic_heap merge_sort2 quick_sort bfs abstract_factory_pattern
 all: $(TARGETS)
+
+abstract_factory_pattern: abstract_factory_pattern.cpp
+	g++ -Wall -o $@ $<
 
 bfs: bfs.cpp
 	g++ -Wall -o $@ $<
