Adding awesome adapter pattern code

--- a/code/interview_practice/Makefile
+++ b/code/interview_practice/Makefile
@@ -1,6 +1,9 @@
 TARGETS=basic_heap merge_sort2 quick_sort bfs abstract_factory_pattern \
-        builder_pattern
+        builder_pattern adapter_pattern
 all: $(TARGETS)
+
+adapter_pattern: adapter_pattern.cpp
+	g++ -Wall -o $@ $<
 
 builder_pattern: builder_pattern.cpp
 	g++ -Wall -o $@ $<
