Adding little hash table

--- a/code/interview_practice/whiteboard/Makefile
+++ b/code/interview_practice/whiteboard/Makefile
@@ -1,7 +1,10 @@
-all: heaps prim
+all: heaps prim htable2
 
 heaps: heaps.c
 	gcc -Wall -o $@ $<
+
+htable2: htable2.cpp
+	g++ -g -Wall -o $@ $<
 
 prim: prim.c
 	gcc -Wall -o $@ $<
