--- a/code/interview_practice/whiteboard/Makefile
+++ b/code/interview_practice/whiteboard/Makefile
@@ -1,6 +1,12 @@
-all: heaps prim htable2
+all: heaps prim htable2 itoa fun_with_strings
 
 heaps: heaps.c
+	gcc -Wall -o $@ $<
+
+fun_with_strings: fun_with_strings.c
+	gcc -Wall -g -o $@ $<
+
+itoa: itoa.c
 	gcc -Wall -o $@ $<
 
 htable2: htable2.cpp
