Changes to whiteboard

--- a/code/interview_practice/whiteboard/Makefile
+++ b/code/interview_practice/whiteboard/Makefile
@@ -1,7 +1,10 @@
-all: heaps prim
+all: heaps prim queue
 
 heaps: heaps.c
 	gcc -Wall -o $@ $<
 
 prim: prim.c
 	gcc -Wall -o $@ $<
+
+queue: queue.cpp
+	g++ -Wall -o $@ $<
