--- a/code/interview_practice/whiteboard/Makefile
+++ b/code/interview_practice/whiteboard/Makefile
@@ -1,4 +1,4 @@
-all: heaps prim htable2 itoa fun_with_strings bintree
+all: heaps prim htable2 itoa fun_with_strings bintree quicksort
 
 bintree: bintree.c
 	gcc -Wall -o $@ $<
@@ -11,6 +11,9 @@ fun_with_strings: fun_with_strings.c
 
 itoa: itoa.c
 	gcc -Wall -o $@ $<
+
+quicksort: quicksort.cpp
+	g++ -g -Wall -o $@ $<
 
 htable2: htable2.cpp
 	g++ -g -Wall -o $@ $<
