Adding splay tree code

--- a/code/interview_practice/Makefile
+++ b/code/interview_practice/Makefile
@@ -1,11 +1,14 @@
 CFLAGS=-Lgmp/lib -Igmp/include
 TARGETS=basic_heap merge_sort2 quick_sort bfs abstract_factory_pattern \
         builder_pattern adapter_pattern fizzbuzz fibo_mat money \
-        fibo_gmp_native avl_tree sel_sort
+        fibo_gmp_native avl_tree sel_sort splay_tree
 all: $(TARGETS)
 
 fibo_gmp_native: fibo_gmp_native.c
 	gcc -Wall $(CFLAGS) -o $@ $< -lgmp
+
+splay_tree: splay_tree.cpp splay_tree.h
+	g++ -O2 -g --std=gnu++0x -Wall -o $@ $<
 
 fibo_mat: fibo_mat.c
 	gcc -Wall $(CFLAGS) -o $@ $< -lgmp
