--- a/code/interview_practice/whiteboard/Makefile
+++ b/code/interview_practice/whiteboard/Makefile
@@ -1,14 +1,22 @@
 INCLUDE=../../cpp/testing/googletest-read-only/include
 LIBS=../../cpp/testing/googletest-read-only/build
 
-all: heaps prim htable2 itoa fun_with_strings bintree \
-     queue quicksort_test
+TARGETS=heaps prim htable2 itoa fun_with_strings bintree \
+        queue quicksort_test radix_sort subsets
+
+all: $(TARGETS)
+
+clean:
+	rm $(TARGETS)
 
 quicksort_test: quicksort_test.cpp qsort.h
 	g++ -O0 -g -o $@ $< -I${INCLUDE} -L${LIBS} -lgtest -lgtest_main -lpthread
 
 bintree: bintree.c
 	gcc -Wall -o $@ $<
+
+subsets: subsets.c
+	gcc -Wall -o $@ $< -lm
 
 heaps: heaps.c
 	gcc -Wall -o $@ $<
@@ -19,13 +27,7 @@ fun_with_strings: fun_with_strings.c
 itoa: itoa.c
 	gcc -Wall -o $@ $<
 
-quicksort2: quicksort2.c
-	gcc -Wall -o $@ $<
-
-quickselect: quickselect.c
-	gcc -Wall -o $@ $<
-
-quicksort: quicksort.cpp
+radix_sort: radix_sort.cpp
 	g++ -g -Wall -o $@ $<
 
 htable2: htable2.cpp
