--- a/code/node/hank_util/package.json
+++ b/code/node/hank_util/package.json
@@ -1,7 +1,7 @@
 {
   "author": {
     "name": "Erik Gregg",
-    "email": "ralree@gmail.com",
+    "email": "ralree@gmail.com"
   },
   "name": "hank_util",
   "description": "Random utilities",
