--- a/system/tmux.conf
+++ b/system/tmux.conf
@@ -29,6 +29,7 @@ set-option -g status-keys vi
 set-window-option -g mode-keys vi
 # Use v for visual selection
 bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-selection
 
 bind h select-pane -L
 bind j select-pane -D
