--- a/system/tmux.conf
+++ b/system/tmux.conf
@@ -6,6 +6,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 bind-key C-a last-window
+bind-key A command-prompt 'rename-window %%'
 
 set -g history-limit 10000
 set -g default-terminal "screen-256color"
