--- a/system/tmux.conf
+++ b/system/tmux.conf
@@ -23,10 +23,11 @@ set-window-option -g window-status-current-fg colour195
 set-window-option -g window-status-current-bg colour236
 set-window-option -g window-status-current-attr bright
 set -g status-right-length 70
-if-shell "uname | grep -q Darwin" "set -g status-right \"#[fg=green]#h\(#[fg=colour243]#(ifconfig `route get 8.8.8.8 | awk \\'/interface:/{print \$2}\\'` | awk \\'/inet /{print \$2}\\')#[fg=green]\) #[fg=colour245]%Y%m%d %H:%M:%S\""
-if-shell "uname | grep -q FreeBSD" "set -g status-right \"#[fg=green]#h\(#[fg=colour243]#(ifconfig vtnet0  | awk \\'/inet /{print \$2}\\')#[fg=green]\) #[fg=colour245]%Y%m%d %H:%M:%S\""
-if-shell "uname | grep -q Linux"  "set -g status-right \"#[fg=green]#h\(#[fg=colour243]#(ifconfig eth0 | awk \\'/inet addr/{split\\\\(\$2, a, /:/\\\\); print a[2]}\\')#[fg=green]\) #[fg=colour245]%Y%m%d %H:%M:%S\""
-if-shell "which ipconfig"  "set -g status-right \"#[fg=green]#h\(#[fg=colour243]#(ipconfig | awk \\'/IPv4/{print $14}\\')#[fg=green]\) #[fg=colour245]%Y%m%d %H:%M:%S\""
+if-shell "uname | grep -q Darwin"  "set -g status-right \"#[fg=green]#h\(#[fg=colour243]#(sh $HOME/.ekgscripts/bsd/tmux_ip_address.sh)#[fg=green]\) #[fg=colour245]%Y%m%d %H:%M:%S\""
+if-shell "uname | grep -q FreeBSD" "set -g status-right \"#[fg=green]#h\(#[fg=colour243]#(sh $HOME/.ekgscripts/bsd/tmux_ip_address.sh)#[fg=green]\) #[fg=colour245]%Y%m%d %H:%M:%S\""
+if-shell "uname | grep -q Linux"   "set -g status-right \"#[fg=green]#h\(#[fg=colour243]#(sh $HOME/.ekgscripts/linux/tmux_ip_address.sh)#[fg=green]\) #[fg=colour245]%Y%m%d %H:%M:%S\""
+# Windows
+if-shell "which findstr"  "set -g status-right \"#[fg=green]#h\(#[fg=colour243]#(ipconfig | awk \\'/IPv4/{print $14}\\')#[fg=green]\) #[fg=colour245]%Y%m%d %H:%M:%S\""
 
 set-option -g status-keys vi
 set-window-option -g mode-keys vi
