Fixing mouse mode in tmux 2.1

--- a/system/tmux.conf
+++ b/system/tmux.conf
@@ -41,7 +41,5 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Turn off mouse
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
+set -g mouse-utf8 off
+set -g mouse off
