More tmux magic

--- a/system/tmux.conf
+++ b/system/tmux.conf
@@ -39,7 +39,9 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+# reload .tmux.conf 
+bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # Turn off mouse
-set -g mouse-utf8 off
-set -g mouse off
+set -g -q mouse-utf8 off
+set -g -q mouse off
