Adding freebsd multitail

--- a/system/tmux.conf
+++ b/system/tmux.conf
@@ -45,3 +45,6 @@ bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 # Turn off mouse
 set -g -q mouse-utf8 off
 set -g -q mouse off
+
+# Set up auto new session on non-existing
+new-session -s main
