--- a/system/tmux.conf
+++ b/system/tmux.conf
@@ -1,5 +1,5 @@
-set -g utf8
-set-window-option -g utf8 on
+#set -g utf8
+#set-window-option -g utf8 on
 set -sg escape-time 0
 
 unbind C-b
@@ -12,7 +12,7 @@ set -g history-limit 10000
 set -g default-terminal "screen-256color"
 
 set-option -g status on
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-justify left
 set -g status-bg colour234
 set -g status-fg colour191
