Adding xterm colors

--- a/system/tmux.conf
+++ b/system/tmux.conf
@@ -9,7 +9,7 @@ bind-key C-a last-window
 bind-key A command-prompt 'rename-window %%'
 
 set -g history-limit 10000
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 set-option -g status on
 set -g status-utf8 on
@@ -39,7 +39,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-# reload .tmux.conf 
+# reload .tmux.conf
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 # Turn off mouse
